--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
         "jquery": "1.6.3",
         "xmlhttprequest": "1.3.0",
         "qunit": "0.5.0"
+    },
+    "engines":{
+        "node": "0.6.14",
+        "npm": "1.1.12"
     }
 }
