--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.1",
     "dependencies": {
         "express": "2.5.8",
-        "dust": "git://github.com/linkedin/dustjs.git#master",
+        "dust": "git://github.com/linkedin/dustjs.git#641a6dd5249fbae963a0b23f8a39fab878ac31b4",
         "backbone": "0.9.2",
         "underscore": "1.3.1",
         "watch-tree-maintained": "*",
